--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
         <p>This Is My Book Store, <u>Welcome</u></p><!--this from formating lesson  -->
         <p>This Is My Book Store, <small>Welcome</small></p><!--this from formating lesson  -->
         <p>This Is My <del>Book Store</del>, Welcome</p><!--this from formating lesson  -->
-        <p><del>$100</del> $80</p><!--this from formating lesson  -->
+        <p>$100 $80</p><!--this from formating lesson  -->
         <p>This Is My <ins>Book Store</ins>, Welcome</p> <!--this from formating lesson  -->
         <p>h<sub>2</sub>o</p><!--this from formating lesson  -->
         <p>2<sup>2</sup></p><!--this from formating lesson  -->
